* Fixed: Prevented Units being added as a UI element while the list is at maximum population. They will instead be added as non-UI buffer elements.

Ready Check Available Tracking
* Weapon Stones
** Wind Glyph (Cleric, Mage - Tank - Medium)

Infernal Dawn
* Warboss Drak
** Fixed: Prevented the encounter sometimes skipping either of the first two bosses.

----
v1.2.7 - Hotfix

Infernal Dawn
* Laethys
** Fixed: Castbar should read CastBar...
* Maelforge - Ember Eggs
** Change: Added a time-out of 20 seconds to allow for the victory message while out of combat.

----
v1.2.6

Rez Master
* Change: Prevented clients sending Ability Remove messages while the player is in combat.
* Fixed: Typo with one of the class tracking variables.
* Fixed: The Rez list was not updating correctly if you log in while in a Party/Raid.
* Fixed: Spark of Life now shows once again. (Adjusted ID for Rift 1.10)
* Fixed: Battle Rez removing now works while in a Party and you change roles.

Ready Check
* Change: The queue system has changed to account for some lag and Instanced PvP issues.

Ready Track Available Tracking
* Potion
** Mighty Fortified Vial (Rogue, Warrior, Cleric - Tank - Medium)
** Mighty Enduring Vial (All - Medium)
* Weapon Stones
** Ancient Exquisite Whetstone

Infernal Dawn
* Laethys
** Fixed: Re-initialized the Laethys castbar in Phase 2 with the new Unit ID.

----
v1.2.5

Hammerknell
* Rune King Molinar
** Removed: Depreciated API commands have been removed from Reset code.

Primeval Feast
* Lord Twyl
** New: Added a separate cast warning Alert for Flickering Fire which can be customized individually from the Purge alert.
** Fixed: Corrected the triggers for Mechanic Spy tracking, for Phase 1 critters.
** Change: The Alert for the cast portion of Flickering Fire is now separated from the Debuff.
** Change: Frozen Nova now has a countdown timer on the alert text.
** Change: Frozen Nova is now marked as Important.

Translations
* Fixed: The output no longer uses print_raw.
